--- a/code/app/templates/base_index.html
+++ b/code/app/templates/base_index.html
@@ -818,20 +818,12 @@
                             <li>
                                 <a href="#" class="menu-dropdown">
                                     <i class="menu-icon fa fa-align-right"></i>
-                                    <span class="menu-text"> Right to Left </span>
+                                    <span class="menu-text"> 基础管理 </span>
 
                                     <i class="menu-expand"></i>
                                 </a>
                                 <ul class="submenu">
-                                    <li>
-                                        <a>
-                                            <span class="menu-text">RTL</span>
-                                            <label class="pull-right margin-top-10">
-                                                <input id="rtl-changer" class="checkbox-slider slider-icon colored-primary" type="checkbox">
-                                                <span class="text"></span>
-                                            </label>
-                                        </a>
-                                    </li>
+
                                     <li>
                                         <a href="index-rtl-ar.html">
                                             <span class="menu-text">Arabic Layout</span>
@@ -839,8 +831,8 @@
                                     </li>
 
                                     <li>
-                                        <a href="index-rtl-fa.html">
-                                            <span class="menu-text">Persian Layout</span>
+                                        <a href="{{ url_for('system.userlist') }}">
+                                            <span class="menu-text">用户管理</span>
                                         </a>
                                     </li>
 
