--- a/code/app/templates/system/users.html
+++ b/code/app/templates/system/users.html
@@ -21,6 +21,12 @@
                                             <span class="input-icon">
                                                 <input type="text" class="form-control" placeholder="Search Tasks">
                                                 <i class="fa fa-search gray"></i>
+
+                                                <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button>
+
                                             </span>
                                         </div>
 
@@ -28,18 +34,14 @@
                                             <div class="easyui-layout" style="width:100%;height:350px;">
 
 
-        <div data-options="region:'east',split:true" title="East" style="width:100px;">
-            <ul class="easyui-tree" style="padding:10px;fit:true;border:0px" id="commonSysClassTree" ></ul>
-        </div>
-        <div data-options="region:'west',split:true" title="West" style="width:100px;"></div>
-        <div data-options="region:'center'">
-            <table id="dataGrid"></table>
+                                                <div data-options="region:'west',split:true" title="East" style="width:200px;">
+                                                    <ul class="easyui-tree" style="padding:10px;fit:true;border:0px" id="commonSysClassTree" ></ul>
+                                                </div>
 
-
-
-
-        </div>
-    </div>
+                                                <div data-options="region:'center'">
+                                                    <table id="dataGrid"></table>
+                                                </div>
+                                            </div>
 
                                         </div>
 
@@ -59,6 +61,25 @@
 
 
 
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 {% endblock pagebody %}
