--- a/code/app/templates/main/index.html
+++ b/code/app/templates/main/index.html
@@ -2371,7 +2371,7 @@
         <!-- END Sub-Navbar with Header and Breadcrumbs-->
 
 
-        <div class="container">
+        <div class="container-fluid">
 
             <!-- START EDIT CONTENT -->
             <div class="row">
