--- a/code/app/templates/main/index.html
+++ b/code/app/templates/main/index.html
@@ -1,6 +1,9 @@
-{% extends "base_index.html" %}
+{% extends "coreui/coreui-base.html" %}
 
 
 {% block title %}贵州移动自主研发框架-pyfw{% endblock title %}
+
+
+{% block body_attribs %} class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show" {% endblock body_attribs %}
 
 
