--- a/code/app/templates/coreui/coreui-base.html
+++ b/code/app/templates/coreui/coreui-base.html
@@ -28,47 +28,45 @@
          <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
         <!-- Icons-->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-    <link href="{{ url_for('static', filename='coreui/vendors/@coreui/icons/css/coreui-icons.min.css') }} " rel="stylesheet">
-    <link href="{{ url_for('static', filename='coreui/vendors/flag-icon-css/css/flag-icon.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='coreui/vendors/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='coreui/vendors/simple-line-icons/css/simple-line-icons.css') }}" rel="stylesheet">
-    <!-- Main styles for this application-->
-    <link href="{{ url_for('static', filename='coreui/css/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='coreui/vendors/pace-progress/css/pace.min.css') }}" rel="stylesheet">
-
-
-
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+        <link href="{{ url_for('static', filename='coreui/vendors/@coreui/icons/css/coreui-icons.min.css') }} " rel="stylesheet">
+        <link href="{{ url_for('static', filename='coreui/vendors/flag-icon-css/css/flag-icon.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='coreui/vendors/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='coreui/vendors/simple-line-icons/css/simple-line-icons.css') }}" rel="stylesheet">
+        <!-- Main styles for this application-->
+        <link href="{{ url_for('static', filename='coreui/css/style.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='coreui/vendors/pace-progress/css/pace.min.css') }}" rel="stylesheet">
 
         {%- endblock styles %}
     {%- endblock head %}
   </head>
 
-  <body{% block body_attribs %}{% endblock body_attribs %}>
+  <body {% block body_attribs %}{% endblock body_attribs %}>
     {% block body -%}
 
-
-        <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
+    {% block appheader -%}
     <header class="app-header navbar">
       <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">
+           {%- block logoimg %}
         <img class="navbar-brand-full" src="{{ url_for('static', filename='coreui/img/brand/logo.svg') }}" width="89" height="25" alt="CoreUI Logo">
-        <img class="navbar-brand-minimized" src="{{ url_for('static', filename='coreui/img/brand/sygnet.svg') }}" width="30" height="30" alt="CoreUI Logo">
+           {%- endblock logoimg %}
+{#        <img class="navbar-brand-minimized" src="{{ url_for('static', filename='coreui/img/brand/sygnet.svg') }}" width="30" height="30" alt="CoreUI Logo">#}
       </a>
       <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
         <span class="navbar-toggler-icon"></span>
       </button>
       <ul class="nav navbar-nav d-md-down-none">
         <li class="nav-item px-3">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="#">首页</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link" href="#">Users</a>
+          <a class="nav-link" href="#">用户</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link" href="#">Settings</a>
+          <a class="nav-link" href="#">配置</a>
         </li>
       </ul>
       <ul class="nav navbar-nav ml-auto">
@@ -94,44 +92,44 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-header text-center">
-              <strong>Account</strong>
+              <strong>账户</strong>
             </div>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-bell-o"></i> Updates
+              <i class="fa fa-bell-o"></i> 更新
               <span class="badge badge-info">42</span>
             </a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-envelope-o"></i> Messages
+              <i class="fa fa-envelope-o"></i> 消息
               <span class="badge badge-success">42</span>
             </a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-tasks"></i> Tasks
+              <i class="fa fa-tasks"></i> 任务
               <span class="badge badge-danger">42</span>
             </a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-comments"></i> Comments
+              <i class="fa fa-comments"></i> 评论
               <span class="badge badge-warning">42</span>
             </a>
             <div class="dropdown-header text-center">
-              <strong>Settings</strong>
+              <strong>设置</strong>
             </div>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-user"></i> Profile</a>
+              <i class="fa fa-user"></i> 个人主页</a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-wrench"></i> Settings</a>
+              <i class="fa fa-wrench"></i> 设置</a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-usd"></i> Payments
+              <i class="fa fa-usd"></i> 支付
               <span class="badge badge-secondary">42</span>
             </a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-file"></i> Projects
+              <i class="fa fa-file"></i> 项目
               <span class="badge badge-primary">42</span>
             </a>
             <div class="divider"></div>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-shield"></i> Lock Account</a>
+              <i class="fa fa-shield"></i> 账户锁定</a>
             <a class="dropdown-item" href="#">
-              <i class="fa fa-lock"></i> Logout</a>
+              <i class="fa fa-lock"></i> 注销</a>
           </div>
         </li>
       </ul>
@@ -142,7 +140,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </header>
-    <div class="app-body">
+    {% endblock appheader -%}
+
+
+
+    {% block appbody -%}
+     <div class="app-body">
+
+      {% block sidebar -%}
       <div class="sidebar">
         <nav class="sidebar-nav">
           <ul class="nav">
@@ -331,11 +336,11 @@
               </ul>
             </li>
             <li class="nav-item mt-auto">
-              <a class="nav-link nav-link-success" href="https://coreui.io" target="_top">
+              <a class="nav-link nav-link-success" href="" target="_top">
                 <i class="nav-icon icon-cloud-download"></i> Download CoreUI</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-danger" href="https://coreui.io/pro/" target="_top">
+              <a class="nav-link nav-link-danger" href="" target="_top">
                 <i class="nav-icon icon-layers"></i> Try CoreUI
                 <strong>PRO</strong>
               </a>
@@ -344,6 +349,7 @@
         </nav>
         <button class="sidebar-minimizer brand-minimizer" type="button"></button>
       </div>
+      {% endblock sidebar -%}
       <main class="main">
         <!-- Breadcrumb-->
         <ol class="breadcrumb">
@@ -358,7 +364,7 @@
               <a class="btn" href="#">
                 <i class="icon-speech"></i>
               </a>
-              <a class="btn" href="./">
+              <a class="btn" href="../">
                 <i class="icon-graph"></i>  Dashboard</a>
               <a class="btn" href="#">
                 <i class="icon-settings"></i>  Settings</a>
@@ -1371,16 +1377,27 @@
         </div>
       </aside>
     </div>
-    <footer class="app-footer">
+    {% endblock appbody -%}
+
+
+
+    {% block appfooter -%}
+        <footer class="app-footer">
       <div>
-        <a href="https://coreui.io">CoreUI</a>
+        <a href="https://#">版权所有：贵州移动信息科技有限公司</a>
         <span>&copy; 2018 creativeLabs.</span>
       </div>
       <div class="ml-auto">
         <span>Powered by</span>
-        <a href="https://coreui.io">CoreUI</a>
+        <a href="https://#">cmcc</a>
       </div>
     </footer>
+     {% endblock appfooter -%}
+
+
+
+
+    {% block scripts %}
     <!-- CoreUI and necessary plugins-->
     <script src="{{ url_for('static', filename='coreui/vendors/jquery/js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='coreui/vendors/popper.js/js/popper.min.js') }}"></script>
@@ -1392,10 +1409,6 @@
     <script src="{{ url_for('static', filename='coreui/vendors/chart.js/js/Chart.min.js') }}"></script>
     <script src="{{ url_for('static', filename='coreui/vendors/@coreui/coreui-plugin-chartjs-custom-tooltips/js/custom-tooltips.min.js') }}"></script>
     <script src="{{ url_for('static', filename='coreui/js/main.js') }}"></script>
-
-
-
-    {% block scripts %}
 
 
     {%- endblock scripts %}
