--- a/code/app/templates/coreui/coreui-base.html
+++ b/code/app/templates/coreui/coreui-base.html
@@ -88,7 +88,14 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/6.jpg') }}" alt="admin@bootstrapmaster.com">
+
+
+{%  if current_user.is_authenticated %}
+<img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/6.jpg') }}" alt="{{ current_user.email }}">
+{% else %}
+未登陆
+{% endif %}
+
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-header text-center">
@@ -128,7 +135,7 @@
             <div class="divider"></div>
             <a class="dropdown-item" href="#">
               <i class="fa fa-shield"></i> 账户锁定</a>
-            <a class="dropdown-item" href="#">
+            <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
               <i class="fa fa-lock"></i> 注销</a>
           </div>
         </li>
