--- a/code/app/templates/coreui/coreui-base.html
+++ b/code/app/templates/coreui/coreui-base.html
@@ -40,6 +40,10 @@
         <link href="{{ url_for('static', filename='toastr/build/toastr.min.css') }}" rel="stylesheet">
 
 
+        <!-- 自定义CSS -->
+        <link href="{{ url_for('static', filename='common/css/main.css') }}" rel="stylesheet">
+
+
 
 
 {#        <!-- jquery easy ui -->#}
