--- a/code/app/templates/main/userlist.html
+++ b/code/app/templates/main/userlist.html
@@ -30,324 +30,84 @@
             <div class="row">
               <div class="col-md-12">
 
-                  <div class="card">
-                  <div class="card-header">
-                    <i class="fa fa-align-justify"></i> 用户管理</div>
-
-                  <div class="card-body">
-                    <table class="table table-responsive-sm">
-
-                      <thead class="">
-                        <tr>
-                          <th class="text-center">
-                            <i class="icon-people"></i>
-                          </th>
-                          <th>用户名</th>
-                          <th class="text-center">性别</th>
-                          <th>资料完善度</th>
-                          <th class="text-center">Payment Method</th>
-                          <th>Activity</th>
-                          <th>操作</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% for user in userlist %}
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename=user.icon) }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-success"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>{{ user.user_name }}</div>
-                            <div class="small text-muted">
-                              <span>{{ user.login_account  }}</span> | 注册时间:
-
-                                {{ user.operate_time  }}</div>
-                          </td>
-                          <td class="text-center">
-
-                              {% if user.user_gender and user.user_gender == 1  %}
-                                <i class="icon-user-female icons font-2xl  mt-4" id="us" title="us"></i>
-                              {% elif user.user_gender %}
-                                <i class="icon-user icons font-2xl  mt-4" id="us" title="us"></i>
-                              {% else %}
-                                  {{ user.user_gender }}
-                              {% endif %}
-
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>50%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>10 sec ago</strong>
-                          </td>
-                          <td>
-                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)">修改</button>
-                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)">删除</button>
-                          </td>
-                        </tr>
-                        {% endfor %}
-
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/1.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-success"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Yiorgos Avraamu</div>
-                            <div class="small text-muted">
-                              <span>New</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-us h4 mb-0" id="us" title="us"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>50%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>10 sec ago</strong>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/2.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-danger"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Avram Tarasios</div>
-                            <div class="small text-muted">
-                              <span>Recurring</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-br h4 mb-0" id="br" title="br"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>10%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-visa" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>5 minutes ago</strong>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/3.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-warning"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Quintin Ed</div>
-                            <div class="small text-muted">
-                              <span>New</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-in h4 mb-0" id="in" title="in"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>74%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-warning" role="progressbar" style="width: 74%" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-stripe" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>1 hour ago</strong>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/4.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-secondary"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Enéas Kwadwo</div>
-                            <div class="small text-muted">
-                              <span>New</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-fr h4 mb-0" id="fr" title="fr"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>98%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-danger" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-paypal" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>Last month</strong>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/5.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-success"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Agapetus Tadeáš</div>
-                            <div class="small text-muted">
-                              <span>New</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-es h4 mb-0" id="es" title="es"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>22%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-info" role="progressbar" style="width: 22%" aria-valuenow="22" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-google-wallet" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>Last week</strong>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename='coreui/img/avatars/6.jpg') }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-danger"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>Friderik Dávid</div>
-                            <div class="small text-muted">
-                              <span>New</span> | Registered: Jan 1, 2015</div>
-                          </td>
-                          <td class="text-center">
-                            <i class="flag-icon flag-icon-pl h4 mb-0" id="pl" title="pl"></i>
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>43%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 43%" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-amex" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>Yesterday</strong>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
 
 
 
 
 
-
-
-                  </div>
-                </div>
-
-
-
-              </div>
-              <!-- /.col-->
-            </div>
-            <!-- /.row-->
 
             <div class="card">
                   <div class="card-header">
                     <i class="fa fa-align-justify"></i> Bootstrap Breadcrumb
                     <div class="card-header-actions">
-                      <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)">新增</button>
+                      <button class="btn btn-sm  btn-success" type="button" onclick="newData(1)"><i class="fa fa-plus-square-o fa-lg"></i>&nbsp;新增</button>
+
+                      <button class="btn btn-sm  btn-secondary" type="button" data-toggle="collapse" href="#collapseExample" aria-expanded="true" aria-controls="collapseExample"><i class="fa fa-search fa-lg"></i>&nbsp;筛选</button>
+
                     </div>
                   </div>
                   <div class="card-body">
-                        <table class="table table-responsive-sm table-striped">
+
+<div class="collapse show" id="collapseExample" style="">
+
+<div class="row">
+  <div class="col-md-5">
+
+        <div class="input-group">
+        <div class="input-group-prepend">
+        <span class="input-group-text">
+        <i class="fa fa-user"></i>
+        </span>
+        </div>
+        <input type="text" id="input1-group1" name="input1-group1" class="form-control" placeholder="用户名/昵称/手机号/邮箱">
+        </div>
+
+
+
+  </div>
+
+  <div class="col-md-3">
+
+    <div class="input-group">
+    <span class="input-group-prepend">
+    <span class="input-group-text">
+    <i class="fa fa-calendar"></i>
+    </span>
+    </span>
+    <input type="text" class="form-control" id="date" placeholder="开始时间">
+    </div>
+
+
+  </div>
+  <div class="col-md-3">
+
+    <div class="input-group">
+    <span class="input-group-prepend">
+    <span class="input-group-text">
+    <i class="fa fa-calendar"></i>
+    </span>
+    </span>
+    <input type="text" class="form-control" id="date" placeholder="结束时间">
+    </div>
+
+
+  </div>
+    <div class="col-md-1 text-right">
+
+
+    <button class="btn btn-sm  btn-secondary " type="button" ><i class="fa fa-plus-square-o fa-lg"></i>&nbsp;查询</button>
+
+  </div>
+
+</div>
+
+</div>
+
+                  <br>
+
+
+
+                      <table class="table table-responsive-sm table-striped">
 
                       <thead class="">
                         <tr>
@@ -410,8 +170,8 @@
                             <strong>10 sec ago</strong>
                           </td>
                           <td>
-                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)">修改</button>
-                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)">删除</button>
+                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)"><i class="fa fa-edit fa-lg"></i>&nbsp;修改</button>
+                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)"><i class="fa fa-close fa-lg "></i>&nbsp;删除</button>
                           </td>
                         </tr>
                         {% endfor %}
@@ -444,7 +204,10 @@
                   </div>
                   </div>
                 </div>
-
+             </div>
+              <!-- /.col-->
+            </div>
+            <!-- /.row-->
 
           </div>
         </div>
