--- a/code/app/templates/coreui/coreui-base.html
+++ b/code/app/templates/coreui/coreui-base.html
@@ -55,6 +55,9 @@
 {##}
 {##}
 {#         <script type="text/javascript" src="{{ url_for('static', filename='commonjs/moment-with-locales.min.js') }}"></script>#}
+        <!-- 日期插件 -->
+        <script type="text/javascript" src="{{ url_for('static', filename='laydate/laydate.js') }}"></script>
+
 
 
 
