--- a/code/app/templates/main/userlist.html
+++ b/code/app/templates/main/userlist.html
@@ -38,9 +38,9 @@
 
             <div class="card">
                   <div class="card-header">
-                    <i class="fa fa-align-justify"></i> Bootstrap Breadcrumb
+                    <i class="fa fa-align-justify"></i> 用户列表
                     <div class="card-header-actions">
-                      <button class="btn btn-sm  btn-success" type="button" onclick="newData(1)"><i class="fa fa-plus-square-o fa-lg"></i>&nbsp;新增</button>
+                      <button class="btn btn-sm  btn-success" type="button" onclick="newData('')"><i class="fa fa-plus-square-o fa-lg"></i>&nbsp;新增</button>
 
 
 
@@ -162,8 +162,8 @@
                   <br>
 
 
-
-                      <table class="table table-responsive-sm table-striped">
+                   <div >
+                   <table class="table table-responsive-sm table-striped">
 
                       <thead class="">
                         <tr>
@@ -173,12 +173,14 @@
                           <th>用户名</th>
                           <th class="text-center">性别</th>
                           <th>资料完善度</th>
-                          <th class="text-center">Payment Method</th>
-                          <th>Activity</th>
+                          <th>邮箱</th>
+                          <th>编号</th>
+                          <th class="text-center">方式</th>
+                          <th>活跃</th>
                           <th>操作</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody id="grid">
                         {% for user in userlist %}
                         <tr>
                           <td class="text-center">
@@ -215,15 +217,17 @@
                               </div>
                             </div>
                             <div class="progress progress-xs">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                           </td>
+                          <td>{{ user.email }}</td>
+                          <td>{{ user.user_no }}</td>
                           <td class="text-center">
                             <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
                           </td>
                           <td>
-                            <div class="small text-muted">Last login</div>
-                            <strong>10 sec ago</strong>
+                            <div class="small text-muted">最后登录时间</div>
+                            <strong>{{ user.Last_login }}</strong>
                           </td>
                           <td>
                             <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)"><i class="fa fa-edit fa-lg"></i>&nbsp;修改</button>
@@ -236,6 +240,9 @@
                       </tbody>
                     </table>
 
+                    </div>
+
+                  <!-- 分页 -->
                    <div>
                     <ul class="pagination justify-content-center">
                       <li class="page-item">
@@ -331,7 +338,78 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" data-whatever="@mdo">Open modal for @mdo</button>
+
+
+
+          <div id="div_demo"></div>
+{% raw %}
+
+
+<script id="demo" type="text/x-jquery-tmpl">
+
+
+                        <tr>
+                          <td class="text-center">
+                            <div class="avatar">
+                              <img class="img-avatar" src="/static/${icon}" alt="admin@bootstrapmaster.com">
+                              <span class="avatar-status badge-success"></span>
+                            </div>
+                          </td>
+                          <td>
+                            <div>${user_name}</div>
+                            <div class="small text-muted">
+                              <span>${login_account}</span> | 注册时间:
+
+                                ${operate_time}</div>
+                          </td>
+                          <td class="text-center">
+
+                             {{if user_gender == 1}}
+                                <i class="icon-user-female icons font-2xl  mt-4" id="us" title="us"></i>
+
+
+                              {{else}}
+                                  <i class="icon-user icons font-2xl  mt-4" id="us" title="us"></i>
+                              {{/if}}
+
+                          </td>
+                          <td>
+                            <div class="clearfix">
+                              <div class="float-left">
+                                <strong>50%</strong>
+                              </div>
+                              <div class="float-right">
+                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
+                              </div>
+                            </div>
+                            <div class="progress progress-xs">
+                              <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                          </td>
+                          <td>${ID}</td>
+                          <td>${ID}</td>
+                          <td class="text-center">
+                            <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
+                          </td>
+                          <td>
+                            <div class="small text-muted">最后登录时间</div>
+                            <strong>${ID}</strong>
+                          </td>
+                          <td>
+                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)"><i class="fa fa-edit fa-lg"></i>&nbsp;修改</button>
+                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)"><i class="fa fa-close fa-lg "></i>&nbsp;删除</button>
+                          </td>
+                        </tr>
+
+
+
+
+
+
+
+</script>
+{% endraw %}
+
 
 
 
@@ -376,6 +454,22 @@
       elem: '#test1' //指定元素
     });
 
+
+
+
+
+    $.ajax({
+            url:'{{ url_for('api.users') }}',
+            type:'get',
+            data: {'appid':1},
+            success:function(data){
+                console.log(data)
+
+                $("#demo").tmpl(data.data).appendTo('#grid');
+            }
+        });
+
+　　
 
 
 
